--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=liberi
 POSTGRES_PASSWORD=liberi
-POSTGRES_DATABASE=learndb
+POSTGRES_DATABASE=clique
+
+SERVER_PORT=3030
