--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+# postgress is used as host due to docker linking capabilities
+POSTGRES_HOST=postgres
+POSTGRES_PORT=2345
 POSTGRES_USER=liberi
 POSTGRES_PASSWORD=liberi
 POSTGRES_DATABASE=clique
